2004-09-17  Derek Price  <derek@ximbiot.com>

	* buffer.c (fd_set_block): Ignore FreeBSD /dev/null problem.

2004-09-17  Derek Price  <derek@ximbiot.com>

	* cvs.h (strip_trailing_slashes): Remove proto in favor of including
	dirname.h from GNULIB.
	* sever.c (dir_name): Rename to...
	(gDirname): ...this to avoid conflicts with the GNULIB function.

2004-09-16  Derek Price  <derek@ximbiot.com>

	* expand_path.c (expand_path): Silence `gcc -Wall'.  Reformat some
	comments to fit in 80 characters.

2004-09-15  Derek Price  <derek@ximbiot.com>

	* sanity.sh (sync-secondary, writeproxy, writeproxy-noredirect): Remove
	redundant checks for $RSYNC readability.

2004-09-15  Derek Price  <derek@ximbiot.com>

	* sanity.sh: Only find $RSYNC once.

2004-09-15  Derek Price  <derek@ximbiot.com>

	* sanity.sh (writeproxy, writeproxy-noredirect): Find $RSYNC in a
	portable manner.

2004-09-15  Mark D. Baushke  <mdb@cvshome.org>

	* sanity.sh: Find $RSYNC in a portable manner.

2004-09-15  Derek Price  <derek@ximbiot.com>

	* parseinfo.c (parse_config): Complete parsing of the remainder of the
	config file when errors are encountered.  Accept and ignore
	UseNewInfoFmtStrings=yes when !SUPPORT_OLD_INFO_FMT_STRINGS.

2004-09-15  Derek Price  <derek@ximbiot.com>

	* buffer.c (buf_copy_data): Pass args to buf_append_data correctly.

2004-09-15  Derek Price  <derek@ximbiot.com>

	* sanity.sh: Set $RSYNC in proxy mode.

2004-09-15  Derek Price  <derek@ximbiot.com>

	* main.c: Fix typo in comment.

2004-09-15  Derek Price  <derek@ximbiot.com>

	* rcs.c: s/abort/assert/.  Reformat function headers.  Remove
	unnecessary typecasts & prototypes.

2004-09-14  Mark D. Baushke  <mdb@cvshome.org>

	* parseinfo.c (readBool): Remove dead code.

	* filesubr.c (cvs_casecmp): Move to...
	* subr.c (cvs_casecmp): ...here.
	* cvs.h (cvs_casecmp): No longer ifdef under SERVER_SUPPORT

	* parseinfo.c (readBool): Return false when there was no boolean
	found.

2004-09-14  Derek Price  <derek@ximbiot.com>
